# music-generator-company

./: .env.example  .gitignore  Dockerfile  PIPELINE.md  demo.md  docker-compose.yml  index.html  pyproject.toml  readme.md
.github/workflows/: ci.yml  pages.yml  release.yml  scheduled_drops.yml  scheduled_drops_ci.yml  scheduled_drops_prod.yml
artifacts/player/: index.html
ci/: known_good_submission_sha256.txt
data/playlists/: _manifest.playlists.json
docs/: CLI_CONTRACT.md  index.html  riffusion_hobby_local.patch  riffusion_server_setup.md  submission_contract_v1.md
docs/releases/: feed.json
fixtures/: ci_db.sqlite  golden_hashes.json
scripts/: build_pages_demo.sh  check_playlist_tracks.py  ci_gate.sh  ci_golden_bless.py  ci_golden_check.py  ci_golden_hash_gate.sh  ci_provider_fallback_smoke.sh  ci_publish_determinism.sh  ci_rebuild_verify.sh  ci_root_determinism.sh  ci_run_determinism.sh  ci_schema_audit.py  ci_submission_determinism.sh  ci_web_bundle_determinism.sh  ci_weekly_determinism.sh  clean_mp3_headers.py  cli_smoke.sh  contract_check.sh  demo_check.sh  demo_clean.sh  demo_report.sh  demo_reset.sh  demo_run.sh  demo_smoke.sh  diffsinger_env.sh  diffsinger_local.py  find_artifacts.py  make_fixture_db.py  marketing_scheduler_smoke.py  marketing_webhook_smoke.py  migrate_db.py  publish_latest.sh  publish_pages.sh  publish_release_feed.sh  release_feed.py  release_local.sh  run_autonomous.sh  run_daily.sh  run_weekly.sh  setup_nginx.sh  (+7 more)
scripts/migrations/:  0002_billing.sql  0000_migrations.sql  (+4 more)
tmp_wav_test/: index.html  playlist.json
(+287 files in other folders)
